# EDD_Proyecto1

./: CMakeLists.txt  Manual de Usuario.docx  README.md  TADs Gestión de Catálogo de Productos.docx  main.cpp  reporte.docx
data/: dataset.csv  dataset2.csv  productos_1000.csv
include/: AVLTree.h  BPlusTree.h  BTree.h  CatalogManager.h  DataLoader.h  HashTable.h  LinkedList.h  Product.h
src/: AVLTree.cpp  BPlusTree.cpp  BTree.cpp  CatalogManager.cpp  DataLoader.cpp  HashTable.cpp  LinkedList.cpp  Product.cpp
